@@ -1,6 +1,7 @@
 $Rev$
 [2007/09/19]
 SvnSupport.py       Fix svn_plugin crash in Linux
+common.py           Add get_config_file_obj() function, and change the invoke.
 
 [2007/09/17]
 FindInFiles.py DirBrowser.py
